# swfl-arrest-scrapers

./: .clasp.json  .claspignore  .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  API Credentials.xlsx  APPS_SCRIPT_API.md  ARCHITECTURE.md  CHARLES_PROXY_GUIDE.md  CHARLOTTE_34COLUMN_README.md  CHARLOTTE_FINDINGS.md  CHARLOTTE_FIX_NOTES.md  CHECK_FOR_CHANGES_SUMMARY.md  COUNTY_SCRAPER_STATUS.md  COUNTY_STATUS.md  CREDENTIALS_GUIDE.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DESOTO_INCREMENTAL_STRATEGY.md  DEVELOPMENT.md  DOCKER_GUIDE.md  Dockerfile  FINAL_REPORT.md  FINAL_STATUS_REPORT.md  GITHUB_ACTIONS_SETUP.md  HENDRY_34COLUMN_README.md  HILLSBOROUGH_34COLUMN_README.md  LOCAL_SCRAPER_GUIDE.md  MANATEE_34COLUMN_README.md  MULTI_COUNTY_SCRAPER_SUMMARY.md  PAGINATION_UPDATE.md  PRODUCTION_READY_GUIDE.md  PROJECT_STATUS_SUMMARY.md  PUSH_INSTRUCTIONS.txt  QUICKSTART.md  QUICK_RUN_GUIDE.md  QUICK_START.md  QUICK_START_GUIDE.md  (+87 more)
.agent/: ADDING_A_COUNTY.md  DEBUGGING_SCRAPERS.md  ERROR_CATALOG.md  HANDOFF_NOTES.md  IDENTITY.md  MEMORY.md  MODIFYING_SHARED_CODE.md  RULES.md  SAFE_REFACTORING.md  SCHEMA_CHANGES.md  SECRETS_AND_CONFIG.md  TESTING_GUIDE.md
.gemini/: AGENTS.md  BOUNDARIES.md  GEMINI.md  HEARTBEAT.md  IDENTITY.md  LOGBOOK.md  MEMORY.md  REFLECTION.md  STATE.md  SYSTEM.md  TASKS.md  TOOLS.md  USER.md
apps_script/: .claspignore  ArrestScraper_CollierCounty.js  ArrestScraper_DeSotoCounty.js  ArrestScraper_LeeCounty.js  Bookmarklets.md  CONFIGURATION_GUIDE.md  Code.gs  Code.js  Code_Helpers 2.js  Code_SignNow_Updates.gs  Code_gs_additions.js  Form.html  (+47 more)
(+474 files in other folders)
